# QT_SMH1

./: CMakeLists.txt  Main.qml  README.md  lightsPage.qml  lightsWidget.qml  main.cpp  mainPage.qml  roomPage.qml  sensorPage.qml  temperaturePage.qml  termostat.cpp  termostat.h
